hoe page complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,18 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <div class="row">
+    <img src="../../assets/home.svg" class="col-md-6" />
+    <div class="col-md-6">
+      <h1 class="display-4">3D Medical Imaging</h1>
+      <p class="lead">Access Intelligent recommendations to assist you 
+        analyze your medical images. Use our 3D engine to
+        visualize the medical image for a better 
+        understanding.</p>
+      <hr class="my-4">
+      <p>Medical Image Analysis and 3D Visualization.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" routerLink="upload" role="button">Upload Image</a>
+      </p>
+    </div>
+  </div>
+
+</div>
