--- a/src/app/scan/recommendations/recommendations.component.html
+++ b/src/app/scan/recommendations/recommendations.component.html
@@ -1,3 +1,42 @@
-<p>
-  recommendations works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <img class="col-md-8" src="" />
+    <div class="col-md-4">
+      <h3>Predictions</h3>
+      <div class="mb-4">
+        <div class="radio">
+          <label><input type="radio" name="optradio" checked>Normal</label>
+        </div>
+        <div class="progress ">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:85%">
+            85%
+          </div>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="radio mr-3">
+          <label><input type="radio" name="optradio" checked>Bacterial pneumonia</label>
+        </div>
+        <div class="progress flex-fill">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:10%">
+            10%
+          </div>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="radio mr-3">
+          <label><input type="radio" name="optradio" checked>Viral pneumonia</label>
+        </div>
+        <div class="progress flex-fill">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:5%">
+            5%
+          </div>
+        </div>
+      </div>
+      <a class="btn btn-primary btn-lg" routerLink="upload" role="button">View in AR</a>
+    </div>
+  </div>
+</div>
