--- a/src/app/scan/augment/augment.component.html
+++ b/src/app/scan/augment/augment.component.html
@@ -1,3 +1,9 @@
-<p>
-  augment works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8 offset-md-2 d-flex flex-column align-items-center mt-5 mb-4">
+      <h3>Scan marker with phone to view in AR</h3>
+      <img src="../../../assets/30.png" class="ar-marker" />
+      <a class="btn btn-primary btn-lg mt-5" routerLink="recommendations" role="button">Upload Another Scan</a>
+    </div>
+  </div>
+</div>
