--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,9 +9,7 @@
         understanding.</p>
       <hr class="my-4">
       <p>Medical Image Analysis and 3D Visualization.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" routerLink="upload" role="button">Upload Image</a>
-      </p>
+      <app-scan></app-scan>
     </div>
   </div>
 
