--- a/src/app/scan/recommendations/recommendations.component.html
+++ b/src/app/scan/recommendations/recommendations.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-8">
-      <img src="../../../assets/test.jpeg" class="radio-img"/>
+      <img src="../../../assets/test.jpeg" class="radio-img" id="radioImg"/>
     </div>
     
     <div class="col-md-4">
